[gd_scene load_steps=11 format=2]

[ext_resource path="res://MainScene.gd" type="Script" id=1]
[ext_resource path="res://Art/Icons/PreCheckIcon.png" type="Texture" id=2]
[ext_resource path="res://Art/Icons/PreCheckIconPressed.png" type="Texture" id=3]
[ext_resource path="res://Art/Icons/NewAddEntryIconPressed.png" type="Texture" id=4]
[ext_resource path="res://Art/Icons/NewInvIconPressed.png" type="Texture" id=5]
[ext_resource path="res://Art/Icons/NewTimeJobIcon.png" type="Texture" id=6]
[ext_resource path="res://Art/Icons/NewInvIcon.png" type="Texture" id=7]
[ext_resource path="res://Art/Icons/NewAddEntryIcon.png" type="Texture" id=8]
[ext_resource path="res://Art/Icons/NewTimeJobIconPressed.png" type="Texture" id=9]
[ext_resource path="res://Art/Icons/NewBG.png" type="Texture" id=10]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Bg-temp" type="Sprite" parent="."]
position = Vector2( 400, 640 )
texture = ExtResource( 10 )

[node name="Control" type="Control" parent="Bg-temp"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -640.0
margin_right = -400.0
margin_bottom = -640.0

[node name="Inventory_Button" type="TextureButton" parent="Bg-temp/Control"]
margin_left = 66.0
margin_top = 249.0
margin_right = 336.0
margin_bottom = 520.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )

[node name="timejob_Button" type="TextureButton" parent="Bg-temp/Control"]
margin_left = 66.0
margin_top = 600.0
margin_right = 337.0
margin_bottom = 871.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 9 )

[node name="addEntry_Button" type="TextureButton" parent="Bg-temp/Control"]
margin_left = 461.0
margin_top = 249.0
margin_right = 732.0
margin_bottom = 519.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 4 )

[node name="preCheck_Button" type="TextureButton" parent="Bg-temp/Control"]
margin_left = 461.0
margin_top = 600.0
margin_right = 731.0
margin_bottom = 869.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[connection signal="pressed" from="Bg-temp/Control/Inventory_Button" to="." method="_on_Inventory_Button_pressed"]
[connection signal="pressed" from="Bg-temp/Control/timejob_Button" to="." method="_on_timejob_Button_pressed"]
[connection signal="pressed" from="Bg-temp/Control/addEntry_Button" to="." method="_on_addEntry_Button_pressed"]
